fix image adjustment button alignment

--- a/src/content-handlers/iiif/modules/uv-openseadragoncenterpanel-module/css/styles.less
+++ b/src/content-handlers/iiif/modules/uv-openseadragoncenterpanel-module/css/styles.less
@@ -111,8 +111,8 @@
                         align-items: center;
                         justify-content: center;
                         cursor: pointer !important;
-                        width: 28px;
-                        height: 28px;
+                        width: 26px;
+                        height: 26px;
                         padding: 0;
                         background-color: black;
 
@@ -142,8 +142,8 @@
                         align-items: center;
                         justify-content: center;
                         cursor: pointer !important;
-                        width: 28px;
-                        height: 28px;
+                        width: 26px;
+                        height: 26px;
                         padding: 0;
                         background-color: black;
 
@@ -172,8 +172,8 @@
                         display: inline-block !important;
                         cursor: pointer !important;
                         background-image: data-uri('../img/home.png') !important;
-                        width: 28px;
-                        height: 28px;
+                        width: 26px;
+                        height: 26px;
                         // margin: 3px !important;
                         img {
                             display: none;
@@ -196,8 +196,8 @@
                         align-items: center;
                         justify-content: center;
                         cursor: pointer !important;
-                        width: 28px;
-                        height: 28px;
+                        width: 26px;
+                        height: 26px;
                         padding: 0;
                         background-color: black;
 
@@ -225,8 +225,8 @@
                         align-items: center;
                         justify-content: center;
                         cursor: pointer !important;
-                        width: 28px;
-                        height: 28px;
+                        width: 26px;
+                        height: 26px;
                         padding: 0;
                         background-color: black;
 
@@ -288,15 +288,15 @@
         z-index: 10;
       }
 
-      .annotationPin {
-        // background-color: white;
-        background-image: data-uri("../img/pin.svg") !important;
-        width: 28px !important;
-        height: 37px !important;
-        background-position-x: 1px;
-        transform: translate(-45%, -90%);
-        overflow: hidden;
-        cursor: pointer;
+            .annotationPin{
+                // background-color: white;
+                background-image: data-uri('../img/pin.svg') !important;
+                width: 26px !important;
+                height: 37px !important;
+                background-position-x: 1px;
+                transform: translate(-45%, -90%);
+                overflow: hidden;
+                cursor: pointer;
 
         span {
           color: #2a2a2a;
